--- a/Push_swap/push_swap/Makefile
+++ b/Push_swap/push_swap/Makefile
@@ -6,16 +6,17 @@
 #    By: jaewchoi <jaewchoi@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/02/16 20:51:18 by jaewchoi          #+#    #+#              #
-#    Updated: 2022/02/16 21:29:42 by jaewchoi         ###   ########.fr        #
+#    Updated: 2022/02/17 21:12:54 by jaewchoi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = push_swap
 
-SRC = ft_list_del.c ft_list_len.c ft_make_stack.c ft_merge_sort.c\
-	  ft_parsing_av.c ft_part.c ft_putstr.c ft_quick_sort.c\
-	  ft_sorted_arr.c ft_split_num.c ft_stack_del.c ft_swap.c\
-	  main.c
+SRC = ft_half_to_a.c ft_half_to_b.c ft_in_swap.c ft_list_del.c\
+	  ft_list_len.c ft_make_stack.c ft_merge_sort.c ft_out_swap.c\
+	  ft_parsing_av.c ft_part.c ft_push_swap.c ft_putstr.c \
+	  ft_quick_sort.c ft_sorted_arr.c ft_split_num.c ft_stack_del.c\
+	  ft_swap.c main.c
 
 OBJ = $(SRC:.c=.o)
 
@@ -36,7 +37,8 @@ fclean : clean
 re : fclean all
 
 $(NAME) : $(OBJ)
-	@$(CC) $(CFLAG) -o $(NAME) $(OBJ)
+	@gcc -g $(SRC) -o $(NAME)
+# @$(CC) $(CFLAG) -o $(NAME) $(OBJ)
 
 %.o : %.c
 	@$(CC) $(CFLAG) -c $^ -o $(^:.c=.o)
