push_swap : prepre

--- a/Push_swap/push_swap/Makefile
+++ b/Push_swap/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: jaewchoi <jaewchoi@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/02/16 20:51:18 by jaewchoi          #+#    #+#              #
-#    Updated: 2022/02/24 20:09:36 by jaewchoi         ###   ########.fr        #
+#    Updated: 2022/02/25 21:21:22 by jaewchoi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,8 @@ SRC = ft_push_to_b.c ft_push_to_a.c ft_list_del.c\
 	  ft_list_len.c ft_make_stack.c ft_merge_sort.c\
 	  ft_parsing_av.c ft_push_swap.c ft_putstr.c\
 	  ft_sorted_arr.c ft_split_num.c ft_stack_del.c\
-	  ft_sort_a.c ft_three_sort.c\
+	  ft_sort_a.c ft_three_sort.c ft_quarter_b.c\
+	  ft_push_a_utils.c\
 	  main.c test.c 
 
 OBJ = $(SRC:.c=.o)
@@ -38,8 +39,8 @@ fclean : clean
 re : fclean all
 
 $(NAME) : $(OBJ)
-#@gcc -g $(SRC) -o $(NAME)
-	@$(CC) $(CFLAG) -o $(NAME) $(OBJ)
+	@gcc -g $(SRC) -o $(NAME)
+#	@$(CC) $(CFLAG) -o $(NAME) $(OBJ)
 
 %.o : %.c
 	@$(CC) $(CFLAG) -c $^ -o $(^:.c=.o)
