pipex : tester1 ok

--- a/5_Pipex/mandatory/printf/Makefile
+++ b/5_Pipex/mandatory/printf/Makefile
@@ -5,17 +5,18 @@
 #                                                     +:+ +:+         +:+      #
 #    By: jaewchoi <jaewchoi@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2022/03/29 18:11:53 by jaewchoi          #+#    #+#              #
-#    Updated: 2022/03/30 03:21:33 by jaewchoi         ###   ########.fr        #
+#    Created: 2021/12/19 13:18:08 by jaewchoi          #+#    #+#              #
+#    Updated: 2022/03/30 03:18:30 by jaewchoi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = pipex
+NAME = libftprintf.a
 
-PRINTF = libftprintf.a
+LIBFT = libft.a
 
-SRC = ft_first_cmd.c ft_get_path.c ft_open_fd.c ft_perror.c\
-	  ft_prog_name.c ft_second_cmd.c main.c
+SRC = ./mandatory/ft_printf.c ./mandatory/handling_conversion.c\
+	  ./mandatory/write_char.c ./mandatory/write_nbr.c ./mandatory/write_str.c\
+	  ./mandatory/ft_putnstr.c
 
 OBJ = $(SRC:.c=.o)
 
@@ -24,20 +25,21 @@ CFLAG = -Wall -Wextra -Werror
 all : $(NAME)
 
 clean :
-	@$(MAKE) -C ./printf fclean
+	@$(MAKE) -C ./libft clean
 	@rm -f $(OBJ)
 
 fclean : clean
-	@$(MAKE) -C ./printf fclean
+	@$(MAKE) -C ./libft fclean
 	@rm -f $(NAME)
 
 re : fclean all
 
 $(NAME) : $(OBJ)
-	@$(MAKE) -C ./printf all
-	@$(CC) $(CFLAG) -o $(NAME) ./printf/$(PRINTF) $(OBJ)
+	@$(MAKE) -C ./libft bonus
+	@cp ./libft/$(LIBFT) ./$@
+	@ar rcs $@ $^
 
 %.o : %.c
-	@$(CC) $(CFLAG) -c $^ -o $(^:.c=.o)
+	@gcc $(CFLAG) -c $^ -o $(^:.c=.o)
 
-.PHONY : all clean fclean re bonus
+.PHONY : all clean fclean re
