--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,17 @@
 		"pipex_bonus.h": "c",
 		"stdlib.h": "c",
 		"pipex.h": "c",
-		"wait.h": "c"
+		"wait.h": "c",
+		"__hash_table": "c",
+		"__split_buffer": "c",
+		"array": "c",
+		"bitset": "c",
+		"initializer_list": "c",
+		"string": "c",
+		"string_view": "c",
+		"unordered_map": "c",
+		"vector": "c",
+		"iterator": "c",
+		"utility": "c"
 	}
 }
