so_long : download img

--- a/6_So_long/Makefile
+++ b/6_So_long/Makefile
@@ -6,15 +6,21 @@
 #    By: jaewchoi <jaewchoi@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/04/22 16:42:32 by jaewchoi          #+#    #+#              #
-#    Updated: 2022/05/08 16:28:04 by jaewchoi         ###   ########.fr        #
+#    Updated: 2022/05/09 03:47:51 by jaewchoi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = so_long
 
+LIBFT = ./libft/libft.a
+
+LIBFT_PATH = ./libft/
+
 INCLUDE = ./include/
 
-SRC = ./main.c
+SRC = test.c
+#./src/main.c ./src/ft_check_map.c ./src/ft_error.c\
+	  ./src/ft_parse_map.c
 
 OBJ = $(SRC:.c=.o)
 
@@ -23,6 +29,7 @@ CFLAG = -Wall -Wextra -Werror
 all : $(NAME)
 
 clean :
+# @$(MAKE) -s -C $(LIBFT_PATH) fclean
 # @$(MAKE) -s -C mlx clean
 	@rm -f $(OBJ)
 
@@ -31,10 +38,13 @@ fclean : clean
 
 re : fclean all
 
-$(NAME) : $(OBJ)
+$(LIBFT) :
+	@$(MAKE) -s -C $(LIBFT_PATH) all
+
+$(NAME) : $(OBJ) $(LIBFT)
 # @$(MAKE) -s -C mlx all
 	@$(CC) $(CFLAG) -L ./mlx -lmlx -framework OpenGL \
-		-framework Appkit $(OBJ) -o $(NAME)
+		-framework Appkit $(OBJ) $(LIBFT) -o $(NAME)
 # -L [디렉토리] : 라이브러리를 찾을 디렉토리 지정
 # -l : 같이 링크할 라이브러리를 지정한다.
 %.o : %.c
