so_long : gooo0otototototo

--- a/6_So_long/Makefile
+++ b/6_So_long/Makefile
@@ -6,7 +6,7 @@
 #    By: jaewchoi <jaewchoi@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/04/22 16:42:32 by jaewchoi          #+#    #+#              #
-#    Updated: 2022/05/14 00:09:30 by jaewchoi         ###   ########.fr        #
+#    Updated: 2022/05/14 20:44:04 by jaewchoi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,8 @@ SRC = ./src/main.c ./src/ft_check_map.c ./src/ft_error.c\
 	  ./src/ft_inst_img.c ./src/ft_loop.c ./src/ft_put_meso.c\
 	  ./src/ft_put_escape.c ./src/ft_put_mush.c src/ft_del_map.c\
 	  ./src/ft_mush_right.c ./src/ft_check_movable.c ./src/ft_mush_left.c\
-	  ./src/ft_collect.c ./src/ft_mush_down.c ./src/ft_mush_up.c
+	  ./src/ft_collect.c ./src/ft_mush_down.c ./src/ft_mush_up.c\
+	  ./src/ft_mush_dead.c ./src/ft_game_clear.c
 
 # SRC = test.c
 
